--- a/trunk/FinanceiraWeb/web/pagusuario.xhtml
+++ b/trunk/FinanceiraWeb/web/pagusuario.xhtml
@@ -73,7 +73,7 @@
                         <li><td class="itens_menu"><a href="introducao.xhtml" class="link_menu">Introdução</a></td></li>
                         <li><td class="itens_menu" ><a href="gestao.xhtml" class="link_menu">Gestão</a></td></li>
                         <li><td class="itens_menu"><a href="antecipacao.xhtml" class="link_menu">Antecipação</a></td></li>
-                        <li><td class="itens_menu"><a href="custos.xhtml" class="link_menu">Custos</a></td></li>
+                        <li><td class="itens_menu"><a href="custos.xhtmlv" class="link_menu">Custos</a></td></li>
                         </ul>
                         </div>
                         <div class="titulo_menu"  ><a href="legislacao.xhtml" class="link_menu" >LEGISLAÇÃO</a></div>
@@ -106,7 +106,9 @@
         </div>
 
 	<div id="footer">
-		<p>Copyright &copy; 2011 FINABAN. Developed by <a href="http://www.thewebhub.com/">  thewebhub</a> and custom by TecnoPigs Ltda.</p>
+		<p>Copyright &copy; 2011 FINABAN. Developed by TecnoPigs Ltda.</p>
 	</div>
+
+
 </body>
 </html>
