--- a/trunk/FinanceiraWeb/web/antecipacao.xhtml
+++ b/trunk/FinanceiraWeb/web/antecipacao.xhtml
@@ -96,7 +96,7 @@
                     </ul>
                 </div>
                 <div id ="colunaB">
-                        <h2>INTRODUÇÃO:</h2>
+                        <h2>ANTECIPAÇÃO</h2>
 			        <h:outputText escape="false" value="#{pagBean.conteudo}"/>
                                 <br></br><br></br><br></br>
                     </div>
