--- a/FinanceiraWeb/web/index.xhtml
+++ b/FinanceiraWeb/web/index.xhtml
@@ -105,7 +105,7 @@
                             <input type="image" src="images/home.jpg"/>
                           </form>
                         <br></br><br></br>
-                          <form action="pagadministrador.xhtml" method="post">
+                          <form action="prosabendo.xhtml" method="post">
                             <input type="image" src="images/servicosinicial.jpg"/>
                           </form>
                         </div>
